
WhiteCore-Sim (Dev) 
Rowan D <greythane@gmail.com>
Fly-Man- <fly.man.opensim@gmail.com>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

greythane
* BulletSim files - Rename into WhiteCore name space in preparation for further updates
* MapImageModule - correct 'update map' command to actually do all regions instead of the first one
  - if root is selected, all region maps are updated
  - if a region is selected, only updates the map for that region

* ScriptData - Updated 'BROKEN SAVE STATE...' message to something a bit more intuitive
* MaintenanceThread - Updated 'BAD VERSION ID...' message to something a bit more intuitive


Mar 6th 2014 - Greythane
* Update GridService.HandleShowRegion() to provide a cleaner format for display of info
* SceneManager.HandleChangeRegion()
  - revised to be case insensitive when specifying the selection region name.
* SceneManager.HandleShowRegions()
  - updated and formatted displayed scene(region) info
  - added estate name and owner details

Mar 6th 2014 - Fly-Man-
 * Moved the WhiteCoreWebServerConfiguration to WebServerConfiguration
 * Moved the WhiteCoreServerConfiguration to ServerConfiguration

Mar 5th 2014: #0006
* Implemented a 'Missing Texture' texture tile for substitution when a requested tecture is not found.
* Re-implemented addon module DefaultInventoryToIARConverter to assist in creation of an updated
    DefaultInventory.iar that includes the additional texture

Feb 26th 2014
* More renaming of missed subdirs & files
* Rename ADNE command to WDNE

Feb 18th 2014
* TerrainChannel
    - updated default height setting for Island creation. (was tending to create submerged islands)
* setupversioninfo.bat (bin) - revamped to use std git commit hashcode

Feb 11th 2014
* DatabaseManager
    - Removed 'whitecore' from migration version table name.  >> 'migrator_version'

Feb 10th 2014
* Treepopulator - addon module
	- set default state to 'disabled' if config not found (Nature.ini)
* Scenemanager ( Load & save oar)